# sx126x-rs

./: Cargo.toml
src/: conf.rs  reg.rs
src/op/: cad.rs  calib.rs  err.rs  irq.rs  mod.rs  modulation.rs  op_modes.rs  packet.rs  rxtx.rs  status.rs
src/sx/: err.rs  mod.rs  wait.rs
