[package]
name = "sx126x"
version = "0.3.0"
authors = ["Henk Oordt <hd@oordt.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A driver for the SX126X Family of LoRa modems"
keywords = ["embedded", "lora", "sx126x", "lorawan"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
repository = "https://github.com/tweedegolf/sx126x-rs"
exclude = [
    "/.cargo",
    "/target",
    "/.gitignore",
]

[features]


[dependencies]
embedded-hal = "1.0"
embedded-hal-async = {version = "1.0.0"}
embassy-futures = "0.1.1"
embassy-executor = "0.6.3"
critical-section = "1.2.0"
#futures-lite = { version = "^2", default-features = false }
[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 3
codegen-units = 1
debug = true
lto = true
