[package]
name = "sx126x"
version = "0.3.0"
authors = ["Henk Oordt <hd@oordt.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A driver for the SX126X Family of LoRa modems"
keywords = ["embedded", "lora", "sx126x", "lorawan"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
repository = "https://github.com/tweedegolf/sx126x-rs"
exclude = ["/.cargo", "/target", "/.gitignore"]

[features]


[dependencies]
critical-section = "1.2.0"
embedded-hal-async = "1.0.0"
embedded-hal = "1.0.0"
nb = "1.1.0"
embassy-sync = "0.6.1"
postcard = "1.1.1"
serde = { version = "1.0", features = ["derive"], default-features = false } 
once_cell = { version = "1.2.0", features = ["critical-section"], default-features = false}
# async-once-cell = { version = "0.5.4", features = ["critical-section"] }


[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 3
codegen-units = 1
debug = true
lto = true
